# SXTransfer

./: LICENSE  README.md
src/ftp/: CMakeLists.txt  ftpclient.cpp  ftpclient.h
